<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
<modelVersion>4.0.0</modelVersion>

<groupId>com.github.fauu</groupId>
<artifactId>kamite</artifactId>
<version>0.0.0</version>

<properties>
  <java.version>18</java.version>
  <maven.compiler.source>18</maven.compiler.source>
  <maven.compiler.target>18</maven.compiler.target>
</properties>

<dependencies>
  <dependency>
    <groupId>com.github.hypfvieh</groupId>
    <artifactId>dbus-java-core</artifactId>
    <version>4.1.0</version>
  </dependency>
  <dependency>
    <groupId>com.github.hypfvieh</groupId>
    <artifactId>dbus-java-transport-native-unixsocket</artifactId>
    <version>4.1.0</version>
  </dependency>
  <dependency>
    <groupId>com.github.tulskiy</groupId>
    <artifactId>jkeymaster</artifactId>
    <version>1.3</version>
  </dependency>
  <dependency>
    <groupId>io.javalin</groupId>
    <artifactId>javalin</artifactId>
    <version>4.6.4</version>
  </dependency>
  <dependency>
    <groupId>com.fasterxml.jackson.core</groupId>
    <artifactId>jackson-databind</artifactId>
    <version>2.13.3</version>
  </dependency>
  <dependency>
    <groupId>com.fasterxml.jackson.datatype</groupId>
    <artifactId>jackson-datatype-jsr310</artifactId>
    <version>2.13.3</version>
  </dependency>
  <dependency>
    <groupId>com.fasterxml.jackson.datatype</groupId>
    <artifactId>jackson-datatype-jdk8</artifactId>
    <version>2.13.3</version>
  </dependency>
  <dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-api</artifactId>
    <version>1.7.36</version>
  </dependency>
  <dependency>
    <groupId>org.apache.logging.log4j</groupId>
    <artifactId>log4j-slf4j-impl</artifactId>
    <version>2.18.0</version>
  </dependency>
  <dependency>
    <groupId>org.apache.logging.log4j</groupId>
    <artifactId>log4j-api</artifactId>
    <version>2.18.0</version>
  </dependency>
  <dependency>
    <groupId>org.apache.logging.log4j</groupId>
    <artifactId>log4j-core</artifactId>
    <version>2.18.0</version>
  </dependency>
  <dependency>
    <groupId>com.typesafe</groupId>
    <artifactId>config</artifactId>
    <version>1.4.2</version>
  </dependency>
  <dependency>
    <groupId>org.jsoup</groupId>
    <artifactId>jsoup</artifactId>
    <version>1.15.2</version>
  </dependency>
  <dependency>
    <groupId>com.atilika.kuromoji</groupId>
    <artifactId>kuromoji-ipadic</artifactId>
    <version>0.9.0</version>
  </dependency>
  <dependency>
    <groupId>net.java.dev.jna</groupId>
    <artifactId>jna</artifactId>
    <version>5.12.1</version>
  </dependency>
</dependencies>

<build>
  <directory>${basedir}/target/java</directory>
  <resources>
    <resource>
      <directory>target/web</directory>
      <targetPath>${basedir}/target/java/classes/web</targetPath>
    </resource>
    <resource>
      <directory>src/main/resources</directory>
    </resource>
    <resource>
      <directory>config</directory>
      <includes>
        <include>config.default.hocon</include>
      </includes>
    </resource>
    <resource>
      <directory>res/icon</directory>
      <includes>
        <include>icon-48.png</include>
      </includes>
      <targetPath>${basedir}/target/java/classes</targetPath>
    </resource>
  </resources>
  <plugins>
    <plugin>
      <groupId>org.codehaus.mojo</groupId>
      <artifactId>exec-maven-plugin</artifactId>
      <version>3.0.0</version>
      <configuration>
        <mainClass>io.github.kamitejp.Main</mainClass>
      </configuration>
    </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>3.10.1</version>
      <configuration>
        <release>${java.version}</release>
        <compilerArgs>--enable-preview</compilerArgs>
        <source>${maven.compiler.source}</source>
        <source>${maven.compiler.target}</source>
      </configuration>
    </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-shade-plugin</artifactId>
      <version>3.3.0</version>
      <configuration>
        <createDependencyReducedPom>false</createDependencyReducedPom>
      </configuration>
      <executions>
        <execution>
          <phase>package</phase>
          <goals>
            <goal>shade</goal>
          </goals>
          <configuration>
            <transformers>
              <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                <mainClass>io.github.kamitejp.Main</mainClass>
                <manifestEntries>
                  <Multi-Release>true</Multi-Release>
                </manifestEntries>
              </transformer>
              <transformer implementation="io.github.edwgiz.log4j.maven.plugins.shade.transformer.Log4j2PluginCacheFileTransformer">
              </transformer>
            </transformers>
          </configuration>
        </execution>
      </executions>
      <dependencies>
        <dependency>
          <groupId>io.github.edwgiz</groupId>
          <artifactId>log4j-maven-shade-plugin-extensions</artifactId>
          <version>2.17.2</version>
        </dependency>
      </dependencies>
    </plugin>
    <plugin>
      <groupId>io.github.git-commit-id</groupId>
      <artifactId>git-commit-id-maven-plugin</artifactId>
      <version>5.0.0</version>
      <executions>
        <execution>
          <id>get-the-git-infos</id>
          <goals>
            <goal>revision</goal>
          </goals>
          <phase>initialize</phase>
        </execution>
      </executions>
      <configuration>
        <generateGitPropertiesFile>true</generateGitPropertiesFile>
        <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
        <includeOnlyProperties>
          <includeOnlyProperty>^git.branch$</includeOnlyProperty>
          <includeOnlyProperty>^git.commit.id.abbrev$</includeOnlyProperty>
          <includeOnlyProperty>^git.tags$</includeOnlyProperty>
        </includeOnlyProperties>
        <commitIdGenerationMode>full</commitIdGenerationMode>
      </configuration>
    </plugin>
    <!-- BLOCKER: https://github.com/spotbugs/spotbugs/issues/1579 -->
    <!-- <plugin> -->
    <!--   <groupId>com.github.spotbugs</groupId> -->
    <!--   <artifactId>spotbugs-maven-plugin</artifactId> -->
    <!--   <version>4.5.3.0</version> -->
    <!--   <configuration> -->
    <!--     <plugins> -->
    <!--       <plugin> -->
    <!--         <groupId>jp.skypencil.findbugs.slf4j</groupId> -->
    <!--         <artifactId>bug-pattern</artifactId> -->
    <!--         <version>1.5.0</version> -->
    <!--       </plugin> -->
    <!--       <plugin> -->
    <!--         <groupId>com.mebigfatguy.sb-contrib</groupId> -->
    <!--         <artifactId>sb-contrib</artifactId> -->
    <!--         <version>7.4.7</version> -->
    <!--       </plugin> -->
    <!--     </plugins> -->
    <!--   </configuration> -->
    <!-- </plugin> -->
  </plugins>
</build>
</project>
